@@ -24,7 +24,8 @@ AllRights:0:1:All rights reserved:
 ############################ 
 # GENERIC rules for GPL
 GPLGen:00:1:^([^,;]+) is <licensed> under the terms of the GPL,? <version>$:2
-GPLGen:01:1:^([^,;]+) is <LICENSED> under the GPL, <VERSION>:$
+GPLGen:01:1:^([^,;]+) is <LICENSED> under the GPL, <VERSION>$:
+GPLGen:01:1:^<LICENSED> under the GPL <VERSION>( license)?$:
 GPLGen:02:0:^<LICENSED> under the GPL <VERSION>, see file LICENSE in this source tree$:
 GPLGen:10:1:^([^,;]+) is free software; you can redistribute it and/or modify it under the terms of the GPL; either <VERSION>$:
 GPLGen:14:1:^([^,;]+) is free software; you can distribute it and/or modify it under the terms of the GPL (<VERSION>) as published by the Free Software Foundation$:
@@ -34,6 +35,7 @@ GPLGen:23:1:^([^,;]+) is free software; you can redistribute it and/or modify it
 GPLGen:24:1:^([^,;]+) is <LICENSED> under the terms of the GPL <VERSION>, and can be copied, distributed, and modified under those terms:
 LesserGPLGen:24:0:^you can redistribute it and/or modify it under the terms of the Lesser GPL <VERSION>:
 LesserGPLGen:23:1:^([^,;]+) is free software; you can redistribute it and/or modify it under the terms of the Lesser GPL \(as published by the Free Software Foundation\) <VERSION>$:
+LesserGPLGen:24:1:^([^,;]+) is free software; you can redistribute it and/or modify it under the terms of the Lesser GPL, either <VERSION>$
 LesserGPLGenv3or:10:1:This program is free software; you can redistribute it and/or modify it under the terms of the Lesser GPL; either <VERSION>, or (at your option) version 3
 AGPLGen:10:1:([^,;]+) is free software; you can redistribute it and/or modify it under the terms of the Affero GPL, either <VERSION>
 GPLGen:24:1:^([^,;]+) is GPL <VERSION> as found in COPYING$:
@@ -42,7 +44,7 @@ LibraryGPLGen:26:1:^([^,;]+) is free software distributed under the terms of the
 GPLGen:40:3:^<licensed> under the GPL <version>$:3
 #GPLGen:45:3:^<licensed> under the GPL <version> only$:3
 GPLGen:46:0:^you can redistribute it and/or modify it under the terms of the GPL(,|;) either <VERSION>$:
-GPLGen:50:1:^([^,;]+) is <LICENSED> under the GPL <version>$:
+GPLGen:50:1:^([^,;]+) is <LICENSED> under the GPL <VERSION>$:
 GPLGen:55:1:^([^,;]+) is <LICENSED> to anyone wishing to use, modify, copy, or redistribute it subject to the terms of the GPL <VERSION>$:
 GPLGen:60:1:^([^,;]+) may be distributed under the terms of the GPL <version>$:
 GPLGen:70:1:^([^,;]+) is subject to the terms of the GPL <version>$:
@@ -123,7 +125,7 @@ GNUurl:10:0:^If not, see <http://www.gnu.org/licenses/>$
 ################################
 # Special cases GPL
 #
-GPLv2orv3:10:0:^This file may be used under the terms of the GNU General Public License versions 2\.0 or 3\.0 as published by the Free Software Foundation and appearing in the files LICENSE\.GPL2 and LICENSE\.GPL3 included in the packaging of this file$
+GPLv2orv3:10:0:^This file may be used under the terms of the GPL versions 2\.0 or 3\.0 as published by the Free Software Foundation and appearing in the files LICENSE\.GPL2 and LICENSE\.GPL3 included in the packaging of this file$
 LGPLv2_1orv3:10:0:^([^,;]+) is free software; you can redistribute it and\/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2\.1 or 3 of the License$
 LGPLv2orv3:10:0:^([^,;]+) is free software; you can redistribute it and\/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2 of the License, or \(at your option\) version 3$
 ###XXXGPLCopy:50:2:^You should have received a copy of the GPL along with (.*); see the file (.*); see the file (.*)$:
@@ -162,7 +164,7 @@ XXXGPLEntertainingNoWarranty:52:1:^This program is distributed in the hope that 
 ############ These ones need to be fixed
 GPLv2orLGPLv2.1:17:0:The contents of this file may be used under the terms of either the GNU General Public License Version 2 or later \(the <quotes>GPL<quotes>\), or the GNU Lesser General Public License Version 2\.1 or later \(the <quotes>LGPL<quotes>\), in which case the provisions of the GPL or the LGPL are applicable instead of those above:
 GPLv2orLGPLv2.1:18:0:the contents of this file may be used under the terms of either of the GNU General Public License Version 2 or later \(the <quotes>GPL<quotes>\), or the GNU Lesser General Public License Version 2\.1 or later \(the <quotes>LGPL<quotes>\), in which case the provisions of the GPL or the LGPL are applicable instead of those above:
-GPLv2orLGPLv2.1:18:0:the contents of this file can be used under the terms of either of the GPL <VERSION> \(the <quotes>GPL<quotes>\), or the Lesser GPL Version 2.1 \(the <quotes>LGPL<quotes>\), in which case the provisions of the GPL or the LGPL are applicable instead of those above:
+GPLv2orLGPLv2.1:18:1:the contents of this file can be used under the terms of either (of )?the GPL <VERSION> \(the <quotes>GPL<quotes>\), or the Lesser GPL Version 2.1 \(the <quotes>LGPL<quotes>\), in which case the provisions of the GPL or the LGPL are applicable instead of those above:
 ##############################################
 ########### GPL and BSD
 ############
@@ -266,7 +268,7 @@ boostAsIs:70:0:THE SOFTWARE IS PROVIDED <quotes>AS IS<quotes>, WITHOUT WARRANTY 
 boostWarr:70:0:IN NO EVENT SHALL THE COPYRIGHT HOLDERS OR ANYONE DISTRIBUTING THE SOFTWARE BE LIABLE FOR ANY DAMAGES OR OTHER LIABILITY, WHETHER IN CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE:
 boostRefv1:70:0:Distributed under the Boost Software License, Version 1\.0:
 boostRefv1:70:0:Use, modification and distribution (is|are) subject to the Boost Software License, Version 1\.0:
-boostSee:70:1:See accompanying file LICENSE_1_0\.txt or (copy at )?http<colon>//www\.boost\.org/LICENSE_1_0\.txt:
+boostSeev1:70:1:See accompanying file LICENSE_1_0\.txt or (copy at )?http<colon>//www\.boost\.org/LICENSE_1_0\.txt:
 intelBSDexport1:70:0:EXPORT LAWS: THIS LICENSE ADDS NO RESTRICTIONS TO THE EXPORT LAWS OF YOUR JURISDICTION\.
 intelBSDexport2:70:0:It is licensee<quotes>s responsibility to comply with any export regulations applicable in licensee<quotes>s jurisdiction:
 intelBSDexport3:70:0:Under CURRENT \(May 2000\) U.S. export regulations this software is eligible for export from the U\.S\. and can be downloaded by or otherwise exported or reexported worldwide EXCEPT to U\.S\. embargoed destinations which include Cuba, Iraq, Libya, North Korea, Iran, Syria, Sudan, Afghanistan and any other country to which the U\.S\. has embargoed goods and services:
@@ -299,13 +301,14 @@ BeerWareVer42LicPart1:52:0:<quotes>THE BEER\-WARE LICENSE<quotes> \(Revision 42\
 BeerWareVer42LicPart2:52:1:([^,;]+) wrote this file:
 BeerWareVer42LicPart3:52:0:As long as you retain this notice you can do whatever you want with this stuff:
 BeerWareVer42LicPart4:52:0:If we meet some day, and you think this stuff is worth it, you can buy me a beer in return:
-CDDLorGPLv2:52:0:The contents of this file are subject to the terms of either the GNU General Public License Version 2 only \(<quotes>GPL<quotes>\) or the Common Development and Distribution License\(<quotes>CDDL<quotes>\) \(collectively, the <quotes>License<quotes>\):
+CDDLorGPL:52:0:The contents of this file are subject to the terms of either the GPL <VERSION> \(<quotes>GPL<quotes>\) or the Common Development and Distribution License\(<quotes>CDDL<quotes>\) \(collectively, the <quotes>License<quotes>\):
 CDDLorGPLv2IfApplicable:52:0:If applicable, add the following below the License Header, with the fields enclosed by brackets \[\] replaced by your own identifying information:
-CDDLorGPLv2IfYouAdd:52:0:However, if you add GPL Version 2 code and therefore, elected the GPL Version 2 license, then the option applies only if the new code is made subject to such option by the copyright holder:
+CDDLorGPLv2IfYouAdd:52:0:However, if you add GPL <Version> code and therefore, elected the GPL Version 2 license, then the option applies only if the new code is made subject to such option by the copyright holder:
 CDDLorGPLv2doNotAlter:52:0:DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER:
-CDDLorGPLv2ifYouWish:52:0:If you wish your version of this file to be governed by only the CDDL or only the GPL Version 2, indicate your decision by adding <quotes>\[Contributor\] elects to include this software in this distribution under the \[CDDL or GPL Version 2\] license\.<quotes> If you (do not|don<quotes>t) indicate a single choice of license, a recipient has the option to distribute your version of this file under either the CDDL, the GPL Version 2 or to extend the choice of license to its licensees as provided above:
-CDDLorGPLv2include:52:0:When distributing the software, include this License Header Notice in each file and include the License file at nbbuild/licenses/CDDL\-GPL\-2\-CP:
-CDDLorGPLv2where:52:0:You can obtain a copy of the License at http<colon>//www.netbeans.org/cddl\-gplv2\.html or nbbuild/licenses/CDDL\-GPL\-2\-CP:
+CDDLorGPLv2ifYouWish:52:0:If you wish your version of this file to be governed by only the CDDL or only the GPL <VERSION>, indicate your decision by adding <quotes>\[Contributor\] elects to include this software in this distribution under the \[CDDL or GPL Version 2\] license\.<quotes> If you (do not|don<quotes>t) indicate a single choice of license, a recipient has the option to distribute your version of this file under either the CDDL, the GPL Version 2 or to extend the choice of license to its licensees as provided above:
+CDDLorGPLv2include:52:0:^When distributing the software, include this License Header Notice in each file and include the License file at (.+)$:
+CDDLorGPLv2where:54:2:You can obtain a copy of the License at http(.+)(cddl\-gplv2|CDDL\+GPL)\.html or (.+)$:
+CDDLorGPLv2Portions:5:0:^<quotes>Portions Copyrighted \[year\] \[name of copyright owner\]<quotes>$:
 CDDLic:52:0:The contents of this file are subject to the terms of the Common Development and Distribution License \(the <quotes>License<quotes>\):
 CDDLic:53:0:The contents of this file are subject to the terms of the Common Development and Distribution License \(the License\):
 CDDLicV1Only:52:0:^The contents of this file are subject to the terms of the Common Development and Distribution License, Version 1\.0 only \(the <quotes>License<quotes>\):
@@ -369,7 +372,9 @@ MITstyleCairoWarranty:52:0:^([^;]+) DISCLAIMS? ALL WARRANTIES WITH REGARD TO THI
 MPL1_1_GPL2_LGPL2_1intention:52:0:^MPL 1\.1/GPL 2\.0/LGPL 2\.1$:
 MPL1_1_GPL2_intention:10:0:^MPL 1\.1/GPL 2\.0$:
 CPL1_GPL2_LGPL2_1intention:52:0:^CPL 1\.0/GPL 2\.0/LGPL 2\.1$:
+CPLv1:10:0:^The contents of this file are subject to the Common Public License Version 1.0 \(the <quotes>License<quotes>\); you may not use this file except in compliance with the License$:
 MPL1_1andLGPLv2_1:52:0:This library is free software; you can redistribute it and/or modify it either under the terms of the GNU Lesser General Public License version 2\.1 as published by the Free Software Foundation \(the <quotes>LGPL<quotes>\) or, at your option, under the terms of the Mozilla Public License Version 1\.1 \(the <quotes>MPL<quotes>\):
+MPL1_1andLGPL:52:0:This library is free software; you can redistribute it and/or modify it either under the terms of the Lesser GPL <VERSION> \(the <quotes>LGPL<quotes>\) or, at your option, under the terms of the Mozilla Public License Version 1\.1 \(the <quotes>MPL<quotes>\):
 MPLGPL2orLGPLv2_1:52:0:Alternatively, the contents of this file can be used under the terms of either of the GNU General Public License Version 2 or later \(the <quotes>GPL<quotes>\), or the GNU Lesser General Public License Version 2\.1 or later \(the <quotes>LGPL<quotes>\), in which case the provisions of the GPL or the LGPL are applicable instead of those above:
 MPL_LGPLsee:52:0:See the LGPL or the MPL for the specific language governing rights and limitations:
 MPLandGPLnoDelete:52:0:If you do not delete the provisions above, a recipient can use your version of this file under either the MPL or the GPL:
@@ -381,7 +386,10 @@ MPLv2part1a:10:0:^2.0$:
 MPLv2part2:10:0:If a copy of the MPL was not distributed with this file, You can obtain one at http<colon>//mozilla.org/MPL/2.0/:
 MPLoptionIfNotDelete2lics:52:0:If you do not alter this notice, a recipient can use your version of this file under either the MPL or the LGPL:
 MPLoptionIfNotDelete3lics:52:0:If you do not delete the provisions above, a recipient can use your version of this file under the terms of any one of the MPL, the GPL or the LGPL:
+
 CPLoptionIfNotDelete3lics:52:0:If you do not delete the provisions above, a recipient can use your version of this file under the terms of any one of the CPL, the GPL or the LGPL:
+CPLoptionNOTGPL:52:0:^If you wish to allow use of your version of this file only under the terms of either the GPL or the LGPL, and not to allow others to use your version of this file under the terms of the CPL, indicate your decision by deleting the provisions above and replace them with the notice and other provisions required by the GPL or the LGPL$:
+
 MPLoptionNOTGPL:52:0:If you wish to allow use of your version of this file only under the terms of either the GPL or the LGPL, and not to allow others to use your version of this file under the terms of the MPL, indicate your decision by deleting the provisions above and replace them with the notice and other provisions required by the GPL or the LGPL:
 MPLorNPLandGPLandLPGLonlyGPLorLGPL:52:2:If you wish to allow (the )?use of your version of this file only under the terms of either the GPL or the LGPL, and not to allow others to use your version of this file under the terms of the (MPL|NPL), indicate your decision by deleting the provisions above and replace them with the notice and other provisions required by the GPL or the LGPL:
 MPLorNPLandGPLonlyGPL:52:2:If you wish to allow (the )?use of your version of this file only under the terms of the GPL and not to allow others to use your version of this file under the (MPL|NPL), indicate your decision by deleting the provisions above and replace them with the notice and other provisions required by the GPL:
@@ -501,10 +509,10 @@ publicDomain:52:1:This ([^ ]+)is public domain software:
 publicDomain:53:1:and placed in the public domain:
 
 qtCommercialuse:52:0:Commercial Usage Licensees holding valid Qt Commercial licenses may use this file in accordance with the Qt Commercial License Agreement provided with the Software or, alternatively, in accordance with the terms contained in a written agreement between you and Nokia:
-qtGPLv2or3:52:0:GNU General Public License Usage Alternatively, this file may be used under the terms of the GNU General Public License versions 2\.0 or 3\.0 as published by the Free Software Foundation and appearing in the file LICENSE\.GPL included in the packaging of this file:
+qtGPLv2or3:52:0:GPL Usage Alternatively, this file (can|may) be used under the terms of the GPL versions 2\.0 or 3\.0 as published by the Free Software Foundation and appearing in the file LICENSE\.GPL included in the packaging of this file:
 qtGPLwhere:52:0:http<colon>//www\.fsf\.org/licensing/licenses/info/GPLv2\.html and http<colon>//www\.gnu\.org/copyleft/gpl\.html:
 qtNokiaExtra:52:0:In addition, as a special exception, Nokia gives you certain additional rights:
-qtReviewGPL:52:0:Please review the following information to ensure GNU General Public Licensing requirements will be met:
+qtReviewGPL:52:0:Please review the following information to ensure General Public Licensing requirements will be met:
 #------------------------------------
 QTv1:10:0:^This file is distributed under the terms of the Q Public License version 1\.0$
 simpleLic1part1:52:0:Redistribution and use in source and binary forms are freely permitted provided that the above copyright notice and this paragraph and the following disclaimer are duplicated in all such forms:
@@ -596,7 +604,7 @@ SunSimpleLic:10:0:^Permission to use, copy, modify, and distribute this software
 simpleLic:10:0:^You may copy, distribute, and use this software as long as this copyright statement is not removed$
 SimpleLic:20:0:^This program is freely distributable without licensing fees and is provided without guarantee or warrantee expressed or implied$
 W3CLic:10:0:^This work is distributed under the W3C\(r\) Software License \[1\] in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE$
-GPLv1orArtistic:10:0:^You may distribute under the terms of either the GNU General Public License or the Artistic License, as specified in the README file$
+GPLv1orArtistic:10:0:^You (may|can) distribute under the terms of either the GPL or the Artistic License, as specified in the README file$
 EmacsLicense:10:0:^Everyone is granted permission to copy, modify and redistribute GNU Emacs, but only under the conditions described in the GNU Emacs General Public License$
 SameTermsAs:10:1:^This program is free software; you can redistribute it and/or modify it under the same terms as ([^,;]+) itself$
 #UseSubjectToTerm:10:0::^Use is subject to license terms$
@@ -641,11 +649,9 @@ ExceptionLeGPL:52:0:As a special exception to the GNU Lesser General Public Lice
 LinkExceptionOpenSSL:52:1:As a special exception to the GPL terms, (.*) grants permission to link the code of this program with any version of the OpenSSL library which is distributed under a license identical to that listed in the included Copying\.OpenSSL file, and distribute linked combinations including the two:
 ClassPathException:53:0:^([^,;]+) designates this particular file as subject to the <quotes>Classpath<quotes> exception as provided by ([^,;]+) in the GPL <VERSION> section of the License file that accompanied this code:
 ClassPathException:54:0:^([^,;]+) designates this particular file as subject to the <quotes>Classpath<quotes> exception as provided by ([^,;]+) in the LICENSE file that accompanied this code:
-qtExceptionNotice:52:0:These rights are described in the Nokia Qt GPL Exception version 1.3, included in the file GPL_EXCEPTION.txt in this package:
+qtExceptionNotice:52:0:These rights are described in the Nokia Qt GPL Exception <VERSION>, included in the file GPL_EXCEPTION.txt in this package:
+qtExceptionWindows:10:0:^Qt for Windows\(R\) Licensees As a special exception, Nokia, as the sole copyright holder for Qt Designer, grants users of the Qt/Eclipse Integration plug\-in the right for the Qt/Eclipse Integration to link to functionality provided by Qt Designer and its related libraries$
 
-# these should be the last one
-
-Exception:52:0:As a special exception,:
 ### Ghosscript license
 artifex:10:0:^Refer to licensing information at http<colon>//www.artifex.com or contact Artifex Software.*$
 
@@ -666,3 +672,7 @@ psqlWarr:10:1:^THE (.+) SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING, BUT NO
 psqlWarr2:10:1:^THE SOFTWARE PROVIDED HEREUNDER IS ON AN <quotes>AS IS<quotes> BASIS, AND (.+) HAS NO OBLIGATIONS TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS$
 postgresqlRef:10:0:^This code is released under the terms of the PostgreSQL License$
 FSFUnlimited:10:0:^This configure script is free software; the Free Software Foundation gives unlimited permission to copy, distribute and modify it$
+
+# these should be the last one
+
+Exception:52:0:As a special exception,:
